--- a/package.json
+++ b/package.json
@@ -64,5 +64,5 @@
     "type": "git",
     "url": "git@github.com:mcafee-eng/auth-test-app.git"
   },
-  "homepage": "https://mcafee-eng.github.io/auth-test-app"
+  "homepage": "https://sturdy-carnival-3jwr1g8.pages.github.io/auth-test-app"
 }
